--- a/branches/dev-issue-09/MyNightOut/MyNightOut/MyNightOut/src/mynightout/ui/EditReservationForm.form
+++ b/branches/dev-issue-09/MyNightOut/MyNightOut/MyNightOut/src/mynightout/ui/EditReservationForm.form
@@ -36,11 +36,11 @@
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="reservationDate" pref="111" max="32767" attributes="0"/>
-                          <Component id="numOfPeople" alignment="0" max="32767" attributes="0"/>
-                          <Component id="customerName" max="32767" attributes="0"/>
+                          <Component id="customerName" pref="111" max="32767" attributes="0"/>
                           <Component id="storeName" max="32767" attributes="0"/>
                           <Component id="reservationId" max="32767" attributes="0"/>
+                          <Component id="numOfPeople" max="32767" attributes="0"/>
+                          <Component id="reservationDate" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <Component id="jLabel6" min="-2" pref="275" max="-2" attributes="0"/>
@@ -53,15 +53,11 @@
                   </Group>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel9" alignment="0" min="-2" pref="104" max="-2" attributes="0"/>
                           <Component id="jLabel8" alignment="0" max="32767" attributes="0"/>
                           <Component id="jLabel10" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="storeNameNew" max="32767" attributes="0"/>
-                          <Component id="customerNameNew" max="32767" attributes="0"/>
                           <Component id="reservationDateNew" max="32767" attributes="0"/>
                           <Component id="numberOfPeopleNew" max="32767" attributes="0"/>
                       </Group>
@@ -89,9 +85,7 @@
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel1" alignment="0" min="-2" pref="26" max="-2" attributes="0"/>
-                  <Component id="customerNameNew" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Component id="customerName" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -101,11 +95,7 @@
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="storeName" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="storeNameNew" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="storeName" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -128,7 +118,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
                   <Group type="103" alignment="0" groupAlignment="3" attributes="0">
-                      <Component id="numOfPeople" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
+                      <Component id="numOfPeople" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel10" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="numberOfPeopleNew" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
@@ -165,6 +155,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="customerName">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="customerNameActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
@@ -205,16 +198,6 @@
         <Property name="text" type="java.lang.String" value="&#x395;&#x3b4;&#x3ce; &#x3b2;&#x3ac;&#x3bb;&#x3c4;&#x3b5; &#x3c4;&#x3b1; &#x3b4;&#x3b5;&#x3b4;&#x3bf;&#x3bc;&#x3ad;&#x3bd;&#x3b1; &#x3c4;&#x3b7;&#x3c2; &#x3ba;&#x3c1;&#x3ac;&#x3c4;&#x3b7;&#x3c3;&#x3b7;&#x3c2; &#x3c0;&#x3bf;&#x3c5; &#x3ad;&#x3c7;&#x3b5;&#x3c4;&#x3b5; &#x3ba;&#x3b1;&#x3bd;&#x3b5;&#x3b9;"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel9">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="&#x38c;&#x3bd;&#x3bf;&#x3bc;&#x3b1; &#x3c0;&#x3b5;&#x3bb;&#x3ac;&#x3c4;&#x3b7;"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JLabel" name="jLabel7">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="&#x38c;&#x3bd;&#x3bf;&#x3bc;&#x3b1; &#x3ba;&#x3b1;&#x3c4;&#x3b1;&#x3c3;&#x3c4;&#x3ae;&#x3bc;&#x3b1;&#x3c4;&#x3bf;&#x3c2;"/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JLabel" name="jLabel8">
       <Properties>
         <Property name="text" type="java.lang.String" value="&#x397;&#x3bc;&#x3b5;&#x3c1;&#x3bf;&#x3bc;&#x3b7;&#x3bd;&#x3af;&#x3b1; &#x3ba;&#x3c1;&#x3ac;&#x3c4;&#x3b7;&#x3c3;&#x3b7;&#x3c2;"/>
@@ -225,11 +208,10 @@
         <Property name="text" type="java.lang.String" value="&#x3a0;&#x3bb;&#x3ae;&#x3b8;&#x3bf;&#x3c2; &#x3b1;&#x3c4;&#x3cc;&#x3bc;&#x3c9;&#x3bd;"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="storeNameNew">
-    </Component>
-    <Component class="javax.swing.JTextField" name="customerNameNew">
-    </Component>
     <Component class="javax.swing.JTextField" name="reservationDateNew">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="reservationDateNewActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="numberOfPeopleNew">
       <Events>
