--- a/trunk/MyNightOut/src/mynightout/ui/CancelBookForm.form
+++ b/trunk/MyNightOut/src/mynightout/ui/CancelBookForm.form
@@ -31,17 +31,14 @@
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="109" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="reservationIdLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="userNameLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="customerNameLabel" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="customerNameTextField" max="32767" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="reservationIdLabel" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="reservationIdTextField" min="-2" pref="78" max="-2" attributes="0"/>
-                          </Group>
+                          <Component id="userNameTextField" max="32767" attributes="0"/>
+                          <Component id="reservationIdTextField" pref="78" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -69,8 +66,8 @@
               <Component id="mesageLabel" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="customerNameLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="customerNameTextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="userNameLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="userNameTextField" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -87,9 +84,9 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JLabel" name="customerNameLabel">
+    <Component class="javax.swing.JLabel" name="userNameLabel">
       <Properties>
-        <Property name="text" type="java.lang.String" value="&#x38c;&#x3bd;&#x3bf;&#x3bc;&#x3b1; &#x39a;&#x3c1;&#x3ac;&#x3c4;&#x3b7;&#x3c3;&#x3b7;&#x3c2;:"/>
+        <Property name="text" type="java.lang.String" value="Username:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="reservationIdLabel">
@@ -97,7 +94,7 @@
         <Property name="text" type="java.lang.String" value="&#x391;&#x3c1;&#x3b9;&#x3b8;&#x3bc;&#x3cc;&#x3c2; &#x3ba;&#x3c1;&#x3ac;&#x3c4;&#x3b7;&#x3c3;&#x3b7;&#x3c2;:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="customerNameTextField">
+    <Component class="javax.swing.JTextField" name="userNameTextField">
     </Component>
     <Component class="javax.swing.JTextField" name="reservationIdTextField">
     </Component>
